Projeto inicial finalizado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
+spring.application.name=API Crud Basic
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=root
 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
+
+infra.auth.token.algorithmSecret=${JWT_SECRET:09jtDyWx502EntvKLBpv6A==}
+infra.auth.token.durationInHours=2
+infra.auth.token.durationInMinutes=30
+infra.auth.token.zoneOffsetId=-03:00
+infra.auth.token.audience=Consumer Service Name
+infra.auth.token.issueName=Name of Organization
 
 infra.messages.errors.unexpected=Ocoreu um erro inesperado durante a execu\u00E7\u00E3o de processo.
 infra.messages.errors.argumentNotValid=Detec\u00E7\u00E3o de um ou mais erros de valida\u00E7\u00E3o.
